# ACCULINNA_analysis_template

./: CMakeLists.txt  README.md  compile.sh  doclean.sh
macros/: test1.C
testanalysis/: CMakeLists.txt  TestAnalysis.cxx  TestAnalysis.h  TestAnalysisLinkDef.h
